# SoftwareRenderer

./: .gitignore  README.md  SoftwareRenderer.sln  meson.build
src/: Directory.Build.props  Shared.props
src/Renderer/: Entity.cpp  Entity.h  Entrypoint.cpp  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Renderer.vcxproj  Renderer.vcxproj.filters  Simulation.cpp  Simulation.h  Utilities.cpp  Utilities.h  main.cpp  pch.h
subprojects/: fmt.wrap  spdlog.wrap
